--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@next/bundle-analyzer": "^10.0.7",
     "@next/mdx": "^10.0.6",
     "github-slugger": "^1.3.0",
     "markdown-toc": "^1.2.0",
     "next": "10.0.7",
+    "next-compose-plugins": "^2.2.1",
     "next-mdx-enhanced": "^5.0.0",
     "next-seo": "^4.20.0",
     "react": "^17.0.1",
