--- a/config.json
+++ b/config.json
@@ -2,6 +2,21 @@
   "projectTitle": "NextBook: Lovely docs with MDX!",
   "projectDescription": "NextBook is quick and easy way to buid technical books or documentation that support modern standards and run blazingly fast. It's built with MDX, Next.js and React and works by compiling markdown or MDX down to plain static html.",
   "projectURL": "https://next-book.vercel.app",
+  "text": {
+    "Keywords": "Keywords",
+    "Last Update": "Last Update",
+    "Toggle color mode": "Toggle color mode",
+    "Toggle dark mode": "Toggle dark mode",
+    "Toggle light mode": "Toggle light mode",
+    "Copy to clipboard": "Copy to clipboard",
+    "Copy": "Copy",
+    "Copied!": "Copied!",
+    "Page Contents": "Page Contents",
+    "Table Of Contents": "Table Of Contents",
+    "Previous chapter": "Previous chapter",
+    "Next chapter": "Next chapter",
+    "Search content": "Search content"
+  },
   "toc": [
     {
       "part": "Documentation",
