--- a/config.json
+++ b/config.json
@@ -15,7 +15,8 @@
     "Table Of Contents": "Table Of Contents",
     "Previous chapter": "Previous chapter",
     "Next chapter": "Next chapter",
-    "Search content": "Search content"
+    "Search content": "Search content",
+    "Figure": "Figure"
   },
   "toc": [
     {
