Side menu quick filter

--- a/config.json
+++ b/config.json
@@ -16,7 +16,8 @@
     "Previous chapter": "Previous chapter",
     "Next chapter": "Next chapter",
     "Search content": "Search content",
-    "Figure": "Figure"
+    "Figure": "Figure",
+    "Reset search": "Reset search"
   },
   "toc": [
     {
