--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "Table Of Contents": "Table Of Contents",
     "Previous chapter": "Previous chapter",
     "Next chapter": "Next chapter",
-    "Search content": "Search content",
+    "Filter content": "Filter content",
     "Figure": "Figure",
     "Reset search": "Reset search"
   },
