--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/react": "^1.6.22",
     "@next/bundle-analyzer": "^10.0.7",
     "@next/mdx": "^10.0.6",
+    "@splitbee/web": "^0.2.4",
     "github-slugger": "^1.3.0",
     "markdown-toc": "^1.2.0",
     "next": "10.0.7",
