More simplifications of codebase

--- a/config.json
+++ b/config.json
@@ -18,8 +18,7 @@
     "Next chapter": "Next chapter",
     "Filter content": "Filter content",
     "Figure": "Figure",
-    "Reset search": "Reset search",
-    "You are here": " (You are here)"
+    "Reset search": "Reset search"
   },
   "toc": [
     {
