Improve mobile layout for page navigation

--- a/config.json
+++ b/config.json
@@ -15,8 +15,8 @@
     "Copied!": "Copied!",
     "Page Contents": "Page Contents",
     "Table Of Contents": "Table Of Contents",
-    "Previous chapter": "Previous chapter",
-    "Next chapter": "Next chapter",
+    "Previous chapter": "Previous",
+    "Next chapter": "Next",
     "Filter content": "Filter content",
     "Figure": "Figure",
     "Reset search": "Reset search"
