Use iso-8601 date format in YAML, display based on configured locale.

--- a/config.json
+++ b/config.json
@@ -4,8 +4,9 @@
   "projectURL": "https://next-book.vercel.app",
   "splitBeeToken": "T7AY7GSIOMQI",
   "defaultTheme": "light",
+  "locale": "en",
   "text": {
-    "Keywords": "Keywords",
+    "Tags": "Tags",
     "Last Update": "Last Update",
     "Toggle color mode": "Toggle color mode",
     "Toggle dark mode": "Toggle dark mode",
