--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mdx-bookmaker",
+  "name": "next-book",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -10,35 +10,35 @@
     "export": "next export"
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@next/bundle-analyzer": "^10.0.7",
-    "@next/mdx": "^10.0.6",
     "@splitbee/web": "^0.2.4",
-    "github-slugger": "^1.3.0",
-    "markdown-toc": "^1.2.0",
     "next": "10.0.7",
-    "next-compose-plugins": "^2.2.1",
-    "next-mdx-enhanced": "^5.0.0",
-    "next-seo": "^4.20.0",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-scrollspy-ez": "^1.0.2",
     "react-shortcuts-hook": "^1.1.0",
     "react-syntax-highlighter": "^15.4.3",
-    "react-use": "^17.1.1",
+    "react-use": "^17.1.1"
+  },
+  "devDependencies": {
+    "next-sitemap": "^1.5.8",
+    "prettier": "^2.2.1",
+    "github-slugger": "^1.3.0",
+    "markdown-toc": "^1.2.0",
     "remark-breaks": "^2.0.1",
     "remark-code-import": "^0.2.0",
     "remark-external-links": "^8.0.0",
     "remark-hint": "^1.0.9",
     "remark-mark-plus": "^1.0.21",
     "remark-slug": "^6.0.0",
-    "remark-sub-super": "^1.0.19"
-  },
-  "devDependencies": {
-    "next-sitemap": "^1.5.8",
-    "prettier": "^2.2.1"
+    "remark-sub-super": "^1.0.19",
+    "next-seo": "^4.20.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/bundle-analyzer": "^10.0.7",
+    "@next/mdx": "^10.0.6",
+    "next-compose-plugins": "^2.2.1",
+    "next-mdx-enhanced": "^5.0.0"
   },
   "license": "MIT"
 }
