--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "printWidth": 100,
+  "printWidth": 80,
+  "jsxBracketSameLine": false,
   "tabWidth": 2,
   "singleQuote": true,
   "jsxSingleQuote": true,
@@ -8,5 +9,6 @@
   "useTabs": false,
   "arrowParens": "always",
   "endOfLine": "lf",
-  "proseWrap": "never"
+  "proseWrap": "never",
+  "trailingComma": "none"
 }
