Refactor content into src/pages to make overwriting from /pages possible

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_ENVIRONMENT=development
+NEXT_PUBLIC_SPLITBEE_TOKEN=yourTokeHere
+NEXT_PUBLIC_USE_LOGO=icon.svg
+NEXT_PUBLIC_GITHUB_URL=https://yourbookrepo
