--- a/template/package.json
+++ b/template/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
+    "devdebug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "postbuild": "next-sitemap --config next-sitemap-config.js",
     "start": "next start",
@@ -10,7 +11,7 @@
   },
   "dependencies": {
     "@splitbee/web": "^0.2.4",
-    "next": "10.0.9",
+    "next": "10.1.1",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
@@ -23,8 +24,8 @@
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@next/bundle-analyzer": "^10.0.7",
-    "@next/mdx": "^10.0.9",
+    "@next/bundle-analyzer": "^10.1.1",
+    "@next/mdx": "^10.1.1",
     "github-slugger": "^1.3.0",
     "markdown-toc": "^1.2.0",
     "next-compose-plugins": "^2.2.1",
