--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@splitbee/web": "^0.2.4",
-    "next": "10.1.1",
+    "classnames": "^2.3.0",
+    "next": "10.0.9",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
-    "react-scrollspy-ez": "^1.0.2",
     "react-shortcuts-hook": "^1.1.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-use": "^17.2.1",
@@ -24,8 +24,8 @@
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@next/bundle-analyzer": "^10.1.1",
-    "@next/mdx": "^10.1.1",
+    "@next/bundle-analyzer": "^10.0.7",
+    "@next/mdx": "^10.0.9",
     "github-slugger": "^1.3.0",
     "markdown-toc": "^1.2.0",
     "next-compose-plugins": "^2.2.1",
