--- a/template/.env.local.example
+++ b/template/.env.local.example
@@ -1,4 +1,5 @@
+NEXT_TELEMETRY_DISABLED=1
 NEXT_PUBLIC_ENVIRONMENT=development
 NEXT_PUBLIC_SPLITBEE_TOKEN=yourTokeHere
 NEXT_PUBLIC_USE_LOGO=icon.svg
-NEXT_PUBLIC_GITHUB_URL=https://yourbookrepo
+NEXT_PUBLIC_GITHUB_URL=https://yourbookrepo.com
