--- a/template/config/config.json
+++ b/template/config/config.json
@@ -2,6 +2,7 @@
   "projectTitle": "My Awesome Book Title",
   "projectDescription": "My Awesome Book Description",
   "projectURL": "https://www.myawesomebook.com",
+  "fontAutoScaling": true,
   "text": {
     "Tags": "Tags",
     "Last Update": "Last Update",
