--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "markdown-toc": "^1.2.0",
-    "next": "latest",
+    "next": "10.1.3",
     "next-compose-plugins": "^2.2.1",
-    "next-mdx-remote": "latest",
-    "next-remote-watch": "latest",
+    "next-mdx-remote": "2.1.4",
+    "next-remote-watch": "1.0.0",
     "next-seo": "^4.23.0",
     "next-sitemap": "^1.6.9",
     "prettier": "^2.2.1",
