--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
-    "dev:watch": "next-remote-watch ./book",
+    "dev:watch": "next-remote-watch ./content",
     "postbuild": "next-sitemap --config next-sitemap-config.js",
     "build": "next build",
     "start": "next start",
@@ -39,5 +39,10 @@
     "remark-slug": "^6.0.0",
     "remark-sub-super": "^1.0.20"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.10",
+    "tailwindcss": "^2.1.1"
+  }
 }
