--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "with-mdx-remote",
-  "version": "1.0.0",
+  "name": "next-book",
+  "version": "2.0.0",
   "scripts": {
     "dev": "next",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
