--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "markdown-toc": "^1.2.0",
-    "next": "10.1.3",
+    "next": "^10.2.0",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "2.1.4",
     "next-remote-watch": "1.0.0",
