--- a/config/config.json
+++ b/config/config.json
@@ -6,17 +6,17 @@
   "text": {
     "Tags": "Tags",
     "Last Update": "Last Update",
-    "Toggle color mode": "Toggle color mode",
-    "Toggle dark mode": "Toggle dark mode",
-    "Toggle light mode": "Toggle light mode",
+    "Toggle color mode": "Toggle color mode (T)",
+    "Toggle dark mode": "Toggle dark mode (T)",
+    "Toggle light mode": "Toggle light mode (T)",
     "Copy to clipboard": "Copy to clipboard",
     "Copy link": "Copy link to this heading",
     "Copy": "Copy",
     "Copied!": "Copied!",
     "Page Contents": "Page Contents",
-    "Table Of Contents": "Table Of Contents",
-    "Previous chapter": "Previous",
-    "Next chapter": "Next",
+    "Toggle mobile sidebar": "Toggle mobile sidebar",
+    "Previous chapter": "Previous chapter (<-)",
+    "Next chapter": "Next chapter (->)",
     "Figure": "Figure"
   },
   "navbarItems": [
@@ -29,8 +29,8 @@
       "path": "/nextbook/nextbook-features"
     },
     {
-      "title": "Documentation",
-      "path": "/documentation/markdown"
+      "title": "Reference",
+      "path": "/reference/markdown"
     },
     {
       "title": "Github",
@@ -42,7 +42,7 @@
       "chapters": [{ "title": "Welcome to NextBook", "path": "/intro/index" }]
     },
     {
-      "part": "NextBook",
+      "part": "Using NextBook",
       "chapters": [
         {
           "title": "NextBook Features",
@@ -67,11 +67,11 @@
       ]
     },
     {
-      "part": "Documentation",
+      "part": "Reference",
       "chapters": [
-        { "title": "Markdown Usage", "path": "/documentation/markdown" },
-        { "title": "Fenced Code Usage", "path": "/documentation/fencedcode" },
-        { "title": "Using MDX", "path": "/documentation/using-mdx" }
+        { "title": "Markdown Usage", "path": "/reference/markdown" },
+        { "title": "Fenced Code Usage", "path": "/reference/fencedcode" },
+        { "title": "Using MDX", "path": "/reference/using-mdx" }
       ]
     }
   ]
