--- a/config/config.json
+++ b/config/config.json
@@ -2,43 +2,76 @@
   "projectTitle": "NextBook: Easy Docs With Markdown!",
   "projectDescription": "NextBook is quick and easy way to buid technical books or documentation that support modern standards and run blazingly fast. It's built with MDX, Next.js and React and works by compiling markdown or MDX down to plain static html.",
   "projectURL": "https://next-book.vercel.app",
-  "fontAutoScaling": false,
-  "centeredLayout": true,
+  "locale": "en",
   "text": {
     "Tags": "Tags",
     "Last Update": "Last Update",
-    "Toggle color mode": "Toggle color mode",
-    "Toggle dark mode": "Toggle dark mode",
-    "Toggle light mode": "Toggle light mode",
+    "Toggle color mode": "Toggle color mode (T)",
+    "Toggle dark mode": "Toggle dark mode (T)",
+    "Toggle light mode": "Toggle light mode (T)",
     "Copy to clipboard": "Copy to clipboard",
     "Copy link": "Copy link to this heading",
     "Copy": "Copy",
     "Copied!": "Copied!",
     "Page Contents": "Page Contents",
-    "Table Of Contents": "Table Of Contents",
-    "Previous chapter": "Previous",
-    "Next chapter": "Next",
+    "Toggle mobile sidebar": "Toggle mobile sidebar",
+    "Previous chapter": "Previous chapter (<-)",
+    "Next chapter": "Next chapter (->)",
     "Figure": "Figure"
   },
-  "toc": [
+  "navbarItems": [
     {
-      "chapters": [{ "title": "Welcome to NextBook", "path": "/" }]
+      "title": "Home",
+      "path": "/intro/index"
     },
     {
-      "part": "Documentation",
+      "title": "NextBook Features",
+      "path": "/nextbook/nextbook-features"
+    },
+    {
+      "title": "Reference",
+      "path": "/reference/markdown"
+    },
+    {
+      "title": "Github",
+      "path": "https://github.com/amiroff/NextBook"
+    }
+  ],
+  "toc": [
+    {
+      "chapters": [{ "title": "Welcome to NextBook", "path": "/intro/index" }]
+    },
+    {
+      "part": "Using NextBook",
       "chapters": [
         {
           "title": "NextBook Features",
-          "path": "/documentation/nextbook-features"
+          "path": "/nextbook/nextbook-features"
         },
-        { "title": "Markdown Usage", "path": "/documentation/markdown" },
-        { "title": "Fenced Code Usage", "path": "/documentation/fencedcode" },
-        { "title": "Using MDX", "path": "/documentation/using-mdx" }
+        {
+          "title": "Getting Started",
+          "path": "/nextbook/getting-started"
+        },
+        {
+          "title": "Settings",
+          "path": "/nextbook/settings"
+        },
+        {
+          "title": "Page Metadata",
+          "path": "/nextbook/page-metadata"
+        },
+        {
+          "title": "In Progress Features",
+          "path": "/nextbook/in-progress-features"
+        }
       ]
     },
     {
+      "part": "Reference",
       "chapters": [
-        { "title": "In Progress Features", "path": "/documentation/in-progress-features" }
+        { "title": "Markdown Usage", "path": "/reference/markdown" },
+        { "title": "Fenced Code Usage", "path": "/reference/fencedcode" },
+        { "title": "Using MDX", "path": "/reference/using-mdx" }
       ]
     }
   ]
