--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
   "name": "next-book",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "scripts": {
     "dev": "next",
-    "devdebug": "NODE_OPTIONS='--inspect' next dev",
-    "build": "next build",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
+    "dev:watch": "next-remote-watch ./content",
     "postbuild": "next-sitemap --config next-sitemap-config.js",
+    "build": "next build",
     "start": "next start",
     "export": "next export"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^10.0.7",
     "@splitbee/web": "^0.2.4",
     "classnames": "^2.3.0",
-    "next": "10.0.9",
-    "react": "^17.0.2",
-    "react-copy-to-clipboard": "^5.0.3",
-    "react-dom": "^17.0.2",
-    "react-shortcuts-hook": "^1.1.0",
-    "react-syntax-highlighter": "^15.4.3",
-    "react-use": "^17.2.1",
-    "remark-containers": "^1.2.0"
-  },
-  "devDependencies": {
-    "@mdx-js/loader": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@next/bundle-analyzer": "^10.0.7",
-    "@next/mdx": "^10.0.9",
     "github-slugger": "^1.3.0",
+    "gray-matter": "^4.0.2",
     "markdown-toc": "^1.2.0",
+    "next": "^10.2.0",
     "next-compose-plugins": "^2.2.1",
-    "next-mdx-enhanced": "^5.0.0",
+    "next-mdx-remote": "2.1.4",
+    "next-remote-watch": "1.0.0",
     "next-seo": "^4.23.0",
     "next-sitemap": "^1.6.9",
     "prettier": "^2.2.1",
+    "react": "17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-dom": "17.0.1",
+    "react-shortcuts-hook": "^1.1.0",
+    "react-syntax-highlighter": "^15.4.3",
+    "react-use": "^17.2.1",
     "remark-breaks": "^2.0.1",
     "remark-code-import": "^0.2.0",
+    "remark-containers": "^1.2.0",
     "remark-external-links": "^8.0.0",
     "remark-hint": "^1.0.9",
     "remark-mark-plus": "^1.0.21",
     "remark-slug": "^6.0.0",
     "remark-sub-super": "^1.0.20"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.10",
+    "tailwindcss": "^2.1.1"
+  }
 }
