--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postbuild": "next-sitemap --config next-sitemap-config.js",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next build && next export"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^10.0.7",
