--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "postbuild": "next-sitemap --config next-sitemap-config.js",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "lint": "next lint"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^11.1.0",
@@ -45,6 +46,9 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.3.1",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0",
+    "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.7"
   }
