--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "remark-hint": "^1.0.10",
     "remark-mark-plus": "^1.0.21",
     "remark-slug": "^7.0.0",
-    "remark-sub-super": "^1.0.20"
+    "remark-sub-super": "^1.0.20",
+    "trim": ">=0.0.3"
   },
   "license": "MIT",
   "devDependencies": {
