--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^11.1.2",
+    "@next/bundle-analyzer": "^12.0.1",
     "@splitbee/web": "^0.3.0",
     "classnames": "^2.3.0",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "markdown-toc": "^1.2.0",
-    "next": ">=11.1.2",
+    "next": "^12.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "3.0.6",
     "next-remote-watch": "1.0.0",
@@ -48,7 +48,7 @@
   "devDependencies": {
     "autoprefixer": "^10.3.7",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint-config-next": "12.0.1",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.17"
