Tooling: Exclude out dir from JS parser

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,5 +3,5 @@
     "baseUrl": ".",
     "jsx": "react"
   },
-  "exclude": ["node_modules", ".next"]
+  "exclude": ["node_modules", ".next", "out"]
 }
