--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "markdown-toc": "^1.2.0",
     "next": "^12.1.6",
     "next-compose-plugins": "^2.2.1",
-    "next-mdx-remote": "3.0.8",
+    "next-mdx-remote": "^4.0.3",
     "next-remote-watch": "1.0.0",
     "next-seo": "^5.4.0",
     "next-sitemap": "^3.0.5",
@@ -37,7 +37,9 @@
     "react-use": "^17.4.0",
     "remark-breaks": "^3.0.2",
     "remark-containers": "^1.2.0",
+    "remark-emoji": "^3.0.2",
     "remark-external-links": "^9.0.1",
+    "remark-gfm": "^3.0.1",
     "remark-hint": "^1.0.10",
     "remark-mark-plus": "^1.0.21",
     "remark-slug": "^7.0.1",
