--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,4 @@
 NEXT_TELEMETRY_DISABLED=1
 NEXT_PUBLIC_SPLITBEE_TOKEN=yourTokeHere
 NEXT_PUBLIC_USE_LOGO=icon.svg
+NEXT_PUBLIC_PAGE_TRACKING_ENABLED=0
