--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
-  "projectTitle": "NextBook: Easy Docs With Markdown!",
-  "projectDescription": "NextBook is quick and easy way to buid technical books or documentation that support modern standards and run blazingly fast. It's built with MDX, Next.js and React and works by compiling markdown or MDX down to plain static html.",
-  "projectURL": "https://next-book.vercel.app",
+  "projectTitle": "AAM Institute: Development 101",
+  "projectDescription": "Welcome to Development 101, a step-by-step primer to Web Development to prepare you for the AAM Institute.",
+  "projectURL": "https://development-101.vercel.app",
   "locale": "en",
   "text": {
     "Tags": "Tags",
@@ -25,36 +25,48 @@
       "path": "/intro"
     },
     {
-      "title": "NextBook Features",
-      "path": "/nextbook/nextbook-features"
+      "title": "Development 101",
+      "path": "/guide/0-programming-mindset"
     },
     {
-      "title": "Reference",
-      "path": "/reference/markdown"
+      "title": "Glossary",
+      "path": "/references/glossary"
+    },
+    {
+      "title": "Resources",
+      "path": "/references/resources"
     },
     {
       "title": "Github",
-      "path": "https://github.com/amiroff/NextBook"
+      "path": "https://github.com/AAM-Institute"
     }
   ],
   "toc": [
     {
-      "chapters": [{ "title": "Welcome to NextBook", "path": "/intro" }]
+      "chapters": [{ "title": "Welcome to Development 101", "path": "/intro" }]
     },
     {
-      "part": "Using NextBook",
+      "part": "Development 101",
       "chapters": [
         {
-          "title": "NextBook Features",
-          "path": "/nextbook/nextbook-features"
+          "title": "Programming Mindset",
+          "path": "/guide/0-programming-mindset"
         },
         {
-          "title": "Getting Started",
-          "path": "/nextbook/getting-started"
+          "title": "Prerequisites",
+          "path": "/guide/1-prerequisites"
         },
         {
-          "title": "Settings",
-          "path": "/nextbook/settings"
+          "title": "HTML Basics",
+          "path": "/guide/2-html-basics"
+        },
+        {
+          "title": "CSS Basics",
+          "path": "/guide/3-css-basics"
+        },
+        {
+          "title": "Javascript Basics",
+          "path": "/guide/4-javascript-basics"
         },
         {
           "title": "Page Metadata",
@@ -67,11 +79,10 @@
       ]
     },
     {
-      "part": "Reference",
+      "part": "Resources",
       "chapters": [
-        { "title": "Markdown Usage", "path": "/reference/markdown" },
-        { "title": "Fenced Code Usage", "path": "/reference/fencedcode" },
-        { "title": "Using MDX", "path": "/reference/using-mdx" }
+        { "title": "Glossary", "path": "/references/glossary" },
+        { "title": "Resources", "path": "/references/resources" }
       ]
     }
   ]
