--- a/config/config.json
+++ b/config/config.json
@@ -20,9 +20,10 @@
     "Next chapter": "Next chapter (->)",
     "Figure": "Figure"
   },
-  "logo": {
-    "initials": "A",
+  "branding": {
     "title": "AAM Institute: Development 101",
+    "initials": "A",
+    "sidebarTitle": "Development 101",
     "href": "https://development-101.vercel.app",
     "img": "/images/logo.png",
     "alt": "AAM Institute: Development 101"
@@ -51,7 +52,7 @@
   ],
   "toc": [
     {
-      "chapters": [{ "title": "Welcome to Development 101", "path": "/intro" }]
+      "chapters": [{ "title": "Welcome to Development 101 ", "path": "/intro" }]
     },
     {
       "part": "Development 101",
