--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
-  "projectTitle": "AAM institute: Dev101",
-  "projectDescription": "Welcome to Dev101, a step-by-step primer to Web Development to prepare you for the AAM institute.",
-  "projectURL": "https://development-101.vercel.app",
+  "projectTitle": "NextBook: Easy Docs With Markdown!",
+  "projectDescription": "NextBook is quick and easy way to buid technical books or documentation that support modern standards and run blazingly fast. It's built with MDX, Next.js and React and works by compiling markdown or MDX down to plain static html.",
+  "projectURL": "https://next-book.vercel.app",
   "locale": "en",
   "text": {
     "Tags": "Tags",
@@ -13,20 +13,19 @@
     "Copy link": "Copy link to this heading",
     "Copy": "Copy",
     "Copied!": "Copied!",
-    "Permalink": "Copy Link",
-    "Page Contents": "On This Page",
+    "Page Contents": "Page Contents",
     "Toggle mobile sidebar": "Toggle mobile sidebar",
     "Previous chapter": "Previous chapter (<-)",
     "Next chapter": "Next chapter (->)",
     "Figure": "Figure"
   },
   "branding": {
-    "title": "AAM institute: Dev101",
-    "initials": "A",
-    "sidebarTitle": "Dev101 by AAM institute",
-    "href": "https://development-101.vercel.app",
+    "title": "Nextbook!",
+    "initials": "N",
+    "sidebarTitle": "Nextbook Docs",
+    "href": "https://next-book.vercel.app",
     "img": "/images/logo.png",
-    "alt": "AAM institute: Dev101"
+    "alt": "Nextbook logo"
   },
   "navbarItems": [
     {
@@ -34,69 +33,53 @@
       "path": "/intro"
     },
     {
-      "title": "Dev101",
-      "path": "/guide/0-programming-mindset"
+      "title": "NextBook Features",
+      "path": "/nextbook/nextbook-features"
     },
     {
-      "title": "Glossary",
-      "path": "/references/glossary"
-    },
-    {
-      "title": "Resources",
-      "path": "/references/resources"
+      "title": "Reference",
+      "path": "/reference/markdown"
     },
     {
       "title": "Github",
-      "path": "https://github.com/AAM-Institute"
+      "path": "https://github.com/amiroff/NextBook"
     }
   ],
   "toc": [
     {
-      "chapters": [{ "title": "Welcome to Dev101 ", "path": "/intro" }]
+      "chapters": [{ "title": "Welcome to NextBook", "path": "/intro" }]
     },
     {
-      "part": "Dev101 Contents",
-      "path": "/guide/0-programming-mindset",
+      "part": "Using NextBook",
       "chapters": [
         {
-          "title": "Programming Mindset",
-          "path": "/guide/0-programming-mindset"
+          "title": "NextBook Features",
+          "path": "/nextbook/nextbook-features"
         },
         {
-          "title": "Basic Setup",
-          "path": "/guide/1-prerequisites"
+          "title": "Getting Started",
+          "path": "/nextbook/getting-started"
         },
         {
-          "title": "HTML Basics",
-          "path": "/guide/2-html-basics"
+          "title": "Settings",
+          "path": "/nextbook/settings"
         },
         {
-          "title": "CSS Basics",
-          "path": "/guide/3-css-basics"
+          "title": "Page Metadata",
+          "path": "/nextbook/page-metadata"
         },
         {
-          "title": "Javascript Basics",
-          "path": "/guide/4-javascript-basics"
-        },
-        {
-          "title": "Back End Basics",
-          "path": "/guide/5-back-end-basics"
-        },
-        {
-          "title": "Further Development and Tooling",
-          "path": "/guide/6-tooling"
-        },
-        {
-          "title": "Full-Stack Javascript",
-          "path": "/guide/7-react"
+          "title": "In Progress Features",
+          "path": "/nextbook/in-progress-features"
         }
       ]
     },
     {
-      "part": "Resources",
+      "part": "Reference",
       "chapters": [
-        { "title": "Glossary", "path": "/references/glossary" },
-        { "title": "Resources", "path": "/references/resources" }
+        { "title": "Markdown Usage", "path": "/reference/markdown" },
+        { "title": "Fenced Code Usage", "path": "/reference/fencedcode" },
+        { "title": "Using MDX", "path": "/reference/using-mdx" }
       ]
     }
   ]
