darken border in dark mode; add permalink text to config

--- a/config/config.json
+++ b/config/config.json
@@ -14,6 +14,7 @@
     "Copy": "Copy",
     "Copied!": "Copied!",
     "Page Contents": "Page Contents",
+    "Permalink": "Copy Link",
     "Toggle mobile sidebar": "Toggle mobile sidebar",
     "Previous chapter": "Previous chapter (<-)",
     "Next chapter": "Next chapter (->)",
