--- a/config/config.json
+++ b/config/config.json
@@ -14,7 +14,7 @@
     "Copy": "Copy",
     "Copied!": "Copied!",
     "Page Contents": "Page Contents",
-    "Permalink": "Copy Link",
+    "Permalink": "Copy link",
     "Toggle mobile sidebar": "Toggle mobile sidebar",
     "Previous chapter": "Previous chapter (<-)",
     "Next chapter": "Next chapter (->)",
@@ -52,6 +52,7 @@
     },
     {
       "part": "Using NextBook",
+      "path": "/nextbook/nextbook-features",
       "chapters": [
         {
           "title": "NextBook Features",
