--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@splitbee/web": "^0.3.0",
     "classnames": "^2.3.2",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.3",
     "markdown-toc": "^1.2.0",
+    "mdx-embed": "^1.1.2",
     "next": "^12.3.1",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^4.2.0",
