--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.3",
     "markdown-toc": "^1.2.0",
+    "mdx-embed": "github:lacymorrow/mdx-embed",
     "next": "^12.3.1",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^4.2.0",
